--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+crossterm = "0.29.0"
 embedded-graphics = "0.8.1"
 linux-embedded-hal = "0.4.0"
+rand = "0.9.1"
+rand_chacha = "0.9.0"
 ssd1306 = "0.10.0"
