--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ embedded-graphics = "0.8.1"
 linux-embedded-hal = "0.4.0"
 rand = "0.9.1"
 rand_chacha = "0.9.0"
+rppal = "0.22.1"
 ssd1306 = "0.10.0"
