--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ target/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.DS_Store
 
 # Added by cargo
-
 /target
